maze.randommouse.RandomMouseMaze.scala.error
Compilation error:
RandomMouseMaze:3: error: illegal start of statement
while (!isOverBaggle()) {var x=random3(); match 
                                          ^