maze.randommouse.RandomMouseMaze.scala.code
override def run() {var x:Int=0;
while (!isOverBaggle()) {var x=random3(); match 
{case 0=>if (!isFacingWall) {forward()}
 case 1=>right(); if (!isFacingWall) {forward()}
 case 2=>left(); if (!isFacingWall) {forward()}}}
    // Your code here 
}